--- a/README
+++ b/README
@@ -1,18 +1,7 @@
-		   README for GNU development tools
+Cross compiled gdb for use on arch linux,
 
-This directory contains various GNU compilers, assemblers, linkers, 
-debuggers, etc., plus their support routines, definitions, and documentation.
 
-If you are receiving this as part of a GDB release, see the file gdb/README.
-If with a binutils release, see binutils/README;  if with a libg++ release,
-see libg++/README, etc.  That'll give you info about this
-package -- supported targets, how to use it, how to report bugs, etc.
-
-It is now possible to automatically configure and build a variety of
-tools with one command.  To build all of the tools contained herein,
-run the ``configure'' script here, e.g.:
-
-	./configure 
+        ./configure  --without-guile --host=x86_64-build_pc-linux-gnu --target=xtensa-esp32-elf
 	make
 
 To install them (by default in /usr/local/bin, /usr/local/lib, etc),
